--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,5 @@
 body{
         font-family: "Roboto", sans-serif;
-        font-weight: 300;
         grid-template: 1fr 1fr 1fr 1fr;
         display: grid;
         max-width: 1200px;
@@ -8,7 +7,6 @@ body{
       }
       
  h1{
-    font-weight: 400;
     display: block;
     color: #fff;
     background-color: rgb(9, 93, 93);
@@ -51,7 +49,7 @@ body{
     border: 10px solid aqua ;
  }
 
-h4 {
+h2 {
     color:white;
     text-align: center;
 }
@@ -97,6 +95,10 @@ h3{
    padding: 1px;
    float: left;
    margin: 0 1rem 1rem 1rem;
+}
+h4{
+   color: #fff;
+   text-align: center;
 }
    
 figure{
