--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,5 @@
 body{
-   font-family: "Roboto", sans-serif;
+   font-family: Roboto, jost, sans-serif;
    display: grid;
    max-width: 1200px;
     
