--- a/styles/base.css
+++ b/styles/base.css
@@ -7,7 +7,7 @@ body{
 h1{
 display: block;
 color: #fff;
-padding: 1em;
+padding: 1rem;
 background-color: rgb(9, 93, 93);
 text-align: center;
 margin: 0 auto;
