--- a/styles/place.css
+++ b/styles/place.css
@@ -5,6 +5,10 @@
 
 body{
     font-family: "Roboto", sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color:var(--background-small);
   
 }
 
