--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,1 +1,38 @@
 
+@media only screen and (min-width:756px) {
+    
+    .hero img {          
+        width:100%;      
+        object-fit: cover;
+    }
+    
+    main section {
+        max-width: 1170px;
+        margin: 0 auto;
+        padding: 15px 25px;
+    }
+
+    
+
+    .data h2::before, .weather h2::before {          
+        position: absolute;
+        top: -10px; 
+        left: -10px;
+             
+    }
+
+    .data {
+        float: left;
+        position: relative;
+        top:-850px;
+        left: 30px;
+        width: 20rem;
+    }
+    .weather {
+        float: right;
+        position: relative;
+        top: -250px;
+        left: -30px;
+        width: 20rem;
+    }
+}
