--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -38,7 +38,7 @@ header{
 
 
 .data h2,.weather h2 {
-    background:var(--label-color:blue);
+    background:var(--label-color);
     color: white;
     text-align: center;
     margin-bottom: 15px;
@@ -68,7 +68,7 @@ header{
     display: block;   
     text-align: left;
     padding-left: 20px;
-    flex: 1, 1;
+    flex: 1 1;
 }
 .data h2::before, .weather h2::before {    
     float: left;
