--- a/styles/form.css
+++ b/styles/form.css
@@ -36,7 +36,8 @@ main{
 
 }
 
-p{
+p{    
+    margin-top:1rem;
     font-weight: bold;
     font-size: 20px;
 
@@ -81,6 +82,7 @@ form{
     padding: 5px 7.5rem;
 }
 .chang{
+    margin-topa:0;
     color: blue;
     font-size: 12px;
 }
