--- a/styles/form-large.css
+++ b/styles/form-large.css
@@ -2,7 +2,7 @@
     main{
         display: grid;
         text-align: left;
-        background-color:rgb(109, 217, 109);
+        background-color:lightblue;
         margin: 0 0;
         
     }
